--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575116462273%22%3A%222kfxoy5Q%22%7D",
+        "value": "%7B%2261575116462273%22%3A%222A7Sqszz%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.671Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.884Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "ps_n",
@@ -41,26 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
-    },
-    {
-        "key": "pas",
-        "value": "61576374292965%3AyQ5Fba18ZT%2C61575116462273%3AaaQAe6PRDR",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "vpd",
@@ -68,52 +50,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "c_user",
-        "value": "61575116462273",
+        "value": "61576154972058",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "xs",
-        "value": "29%3A-EBcdTbjznkeJQ%3A2%3A1753286765%3A-1%3A-1",
+        "value": "19%3ABEEagUHmSRS9gQ%3A2%3A1753409521%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
+    },
+    {
+        "key": "pas",
+        "value": "61576374292965%3AyQ5Fba18ZT%2C61575116462273%3AaaQAe6PRDR%2C61575002167964%3Ak6u3yEaVR7%2C61576154972058%3AgCabCE4sK7",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "fr",
-        "value": "0WaYUbJf7ZDmNCoHu.AWeg9Jb1pz7lCLVjXChbZVLU__xSDrY6fsULRUs0x18iHZyS53g.BogNvh..AAA.0.0.BogQhv.AWfjgf125SSUUkmaWBn0VTdbc68",
+        "value": "0WaYUbJf7ZDmNCoHu.AWfZFmT9q_U3l9WtDMKJw2NjAyd5vcJXaw7HBkgsHxEouJY1cEE.BogNvh..AAA.0.0.Boguix.AWchDgon8V2fmAE_9C5LOYDD_RQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "fbl_st",
-        "value": "101720700%3BT%3A29221446",
+        "value": "101331913%3BT%3A29223495",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2877%3Btimestamp%3A1753286767",
+        "value": "v2%3Bclient_version%3A2879%3Btimestamp%3A1753409713",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-24T09:10:18.674Z",
-        "lastAccessed": "2025-07-24T09:10:18.674Z"
+        "creation": "2025-07-25T02:18:31.885Z",
+        "lastAccessed": "2025-07-25T02:18:31.885Z"
     }
 ]
