--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "ŠÛHÄŅ ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "𝙱𝚒𝚐 ✸ 𝚍𝚊𝚍 ✸ 𝚝𝚎𝚊𝚖𝚎𝚛 ✸𝚊𝚜𝚜𝚒𝚜𝚝𝚊𝚗 ✸",
     "PREFIX": "/",
     "ADMINBOT": [
         "61575867733347",
