--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.658Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "xs",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "locale",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.110Z",
+        "lastAccessed": "2025-07-26T01:13:53.110Z"
     },
     {
         "key": "pas",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.111Z",
+        "lastAccessed": "2025-07-26T01:13:53.111Z"
     },
     {
         "key": "fr",
-        "value": "0WaYUbJf7ZDmNCoHu.AWfZFmT9q_U3l9WtDMKJw2NjAyd5vcJXaw7HBkgsHxEouJY1cEE.BogNvh..AAA.0.0.Boguix.AWchDgon8V2fmAE_9C5LOYDD_RQ",
+        "value": "0WaYUbJf7ZDmNCoHu.AWeLVhCI57RuPAikB42dlXj3ijABGAs5L_ot0FrXqjO01qgdBTw.BogNvh..AAA.0.0.Bog6FJ.AWdqahQ2qQ_PqY4NSgyNGKGtHpo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.111Z",
+        "lastAccessed": "2025-07-26T01:13:53.111Z"
     },
     {
         "key": "fbl_st",
-        "value": "101331913%3BT%3A29223495",
+        "value": "100626805%3BT%3A29224282",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.111Z",
+        "lastAccessed": "2025-07-26T01:13:53.111Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2879%3Btimestamp%3A1753409713",
+        "value": "v2%3Bclient_version%3A2879%3Btimestamp%3A1753456969",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-25T15:22:41.659Z",
-        "lastAccessed": "2025-07-25T15:22:41.659Z"
+        "creation": "2025-07-26T01:13:53.111Z",
+        "lastAccessed": "2025-07-26T01:13:53.111Z"
     }
 ]
